--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,6 +8,7 @@
       <div class='article'>
         <p><%= article[0] %></p>
         <p><%= link_to article[1], article[2] %></p>
+        <p><%= article[3] %></p>
       </div>
     <% end %>
   </div>
