--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,21 @@
         <h2>All the news you want to read in one place</h2>
       </div>
     </nav>
+    <section class ='inputs'>
+      <%= form_tag("/index", method: "get") do %>
+        <%= label_tag(:topic, "Topic") %>
+        <%= text_field_tag (:topic), nil, value: @topic %>
+
+        <%= label_tag(:from_date, "From Date") %>
+        <%= text_field_tag (:from_date), nil, value: @from_date.to_date.strftime("%b %d, %Y") %>
+
+        <%= label_tag(:to_date, "To Date") %>
+        <%= text_field_tag (:to_date), nil, value: @to_date.to_date.strftime("%b %d, %Y") %>
+
+        <%= submit_tag("Search for Articles") %>
+      <% end %>
+      <%= button_to "Clear input", root_path %>
+    </section>
     <%= yield %>
     <footer>
       <h3>Powered by NewsAPI</h3>
