Add datepicker and functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <%= javascript_include_tag 'application' %>
   </head>
 
@@ -16,21 +17,6 @@
         <h2>All the news you want to read in one place</h2>
       </div>
     </nav>
-    <section class ='inputs'>
-      <%= form_tag("/index", method: "get") do %>
-        <%= label_tag(:topic, "Topic") %>
-        <%= text_field_tag (:topic), nil, value: @topic %>
-
-        <%= label_tag(:from_date, "From Date") %>
-        <%= text_field_tag (:from_date), nil, value: @from_date.to_date.strftime("%b %d, %Y") %>
-
-        <%= label_tag(:to_date, "To Date") %>
-        <%= text_field_tag (:to_date), nil, value: @to_date.to_date.strftime("%b %d, %Y") %>
-
-        <%= submit_tag("Search for Articles") %>
-      <% end %>
-      <%= button_to "Clear input", root_path %>
-    </section>
     <%= yield %>
     <footer>
       <h3>Powered by NewsAPI</h3>
