--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,25 @@
+<section class ='inputs'>
+  <%= form_tag("/index", method: "get") do %>
+    <%= label_tag(:topic, "Topic") %>
+    <%= text_field_tag (:topic), nil, value: @topic %>
+
+    <%= label_tag(:from_date, "From") %>
+    <%= text_field_tag (:from_date), nil, data:{ provide: 'datepicker', date_format: "M dd, yyyy"}, value: @from_date.to_date.strftime("%b %d, %Y") %>
+
+    <%= label_tag(:to_date, "To") %>
+    <%= text_field_tag (:to_date), nil, data:{ provide: 'datepicker', date_format: "M dd, yyyy"}, value: @to_date.to_date.strftime("%b %d, %Y") %>
+
+    <%= submit_tag("Search for Articles") %>
+  <% end %>
+  <%= link_to "Clear input", root_path %>
+</section>
+
+<script>
+  $(document).ready(function(){
+    $('.datepicker').datepicker();
+  });
+</script>
+
 <section class='main-page'>
   <div class='articles'>
     <% if !@presenter.articles.nil? %>
@@ -11,3 +33,5 @@
     <% end %>
   </div>
 </section>
+
+<%= javascript_include_tag "application" %>
