--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,6 +4,43 @@ body {
   grid-template-rows: auto auto auto auto;
 }
 
+nav {
+  display: grid;
+  grid-template-columns: auto auto;
+  background-color: black;
+  padding-left: 20px;
+}
+
+nav h1 {
+  font-size: 40px;
+}
+
+nav h2 {
+  color: white;
+}
+
+.inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 200px;
+  padding: 20px;
+  padding-left: 20px;
+  background-color: lightblue;
+}
+
+.form {
+  height: 25px;
+  text-align: center;
+  margin: 8px;
+}
+
+.datepicker {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+}
+
 .articles {
   display: grid;
   grid-template-columns: 300px 300px;
