--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,21 +13,15 @@
     <%= label_tag(:to_date, "To") %>
     <%= text_field_tag (:to_date), nil, data:{ provide: 'datepicker', date_format: "M dd, yyyy"}, value: @to_date.to_date.strftime("%b %d, %Y") %>
     </div>
-    <div class='form'>
+    <div class='input-button'>
     <%= submit_tag("Search for Articles") %>
     </div>
   <% end %>
   </div>
-  <div>
+  <div class='input-button'>
   <%= button_to "Clear input", root_path, method: :get %>
   </div>
 </section>
-
-<script>
-  $(document).ready(function(){
-    $('.datepicker').datepicker();
-  });
-</script>
 
 <section class='main-articles'>
   <div class='articles'>
