--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -52,12 +52,14 @@ nav h2 {
   grid-template-columns: 300px 300px;
   grid-template-rows: auto;
   justify-content: center;
+  background-color: beige;
 }
 
 .article {
   padding: 10px;
   border: 1px solid black;
   margin: 10px;
+  background-color: white;
 }
 
 footer {
